--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,89 +1,54 @@
 name: chatwoot
-description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
+description: 'Mobile app for chatwoot platform. Built with Flutter.'
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
 version: 1.0.0+1
 
 environment:
   sdk: ^3.6.1
+  flutter: 3.27.2
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  path: ^1.9.0
+  path_provider: ^2.1.5
+  dio: ^5.7.0
+  logger: ^2.5.0
+  get: ^4.6.6
+  get_storage: ^2.1.1
+  events_emitter: ^0.6.0
+  url_launcher: ^6.3.1
+  google_fonts: ^6.2.1
+  file_picker: ^8.1.7
+  cached_network_image: ^3.4.1
+  flutter_inappwebview: ^6.1.5 # A Flutter plugin that allows you to add an inline webview
+  sqflite: ^2.4.1 # Flutter plugin for SQLite
+  flutter_dotenv: # Easily configure any flutter application with global variables using a `.env` file.
+    git:
+      url: https://github.com/trongtindev/flutter_dotenv.git
+  result_dart: ^2.0.0 # Overruns are common in design, and modern architectures always designate a place to handle failures.
+  package_info_plus: ^8.1.2
+  toastification: ^2.3.0
+  timeago: ^3.7.0
+
+  # desktop
+  window_manager: ^0.4.3 # This plugin allows Flutter desktop apps to resizing and repositioning the window.
+  sqflite_common_ffi: ^2.3.4+4 # Linux/Windows/DartVM support
+
+  # tracking
+  sentry_flutter: ^8.12.0 # Sentry SDK for Flutter.
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
+  assets:
+    - .env.production
+    - .env.development
+    - .env
+    - assets/sqlite/data.sql
+    - assets/images/
