ci: fix env missing

--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -22,6 +22,10 @@ jobs:
           flutter-version-file: pubspec.yaml
           cache: true
 
+      - name: Create .env file
+        run: |
+          echo "BAR=FOO" >> .env
+
       - run: flutter --version
       - run: flutter pub get
       - run: flutter test
