--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: chatwoot
-description: "Cross-Platform app for chatwoot."
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+description: 'Cross-Platform app for chatwoot.'
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
@@ -12,7 +12,9 @@ dependencies:
     sdk: flutter
 
   path: ^1.9.0 # The path package provides common operations for manipulating paths
-  intl: ^0.19.0 # Provides internationalization and localization facilities
+  intl: any # Provides internationalization and localization facilities
+  flutter_localizations:
+    sdk: flutter
   path_provider: ^2.1.5
   dio: ^5.7.0 # A powerful HTTP networking package for Dart/Flutter
   logger: ^2.5.0
@@ -32,7 +34,7 @@ dependencies:
   package_info_plus: ^8.1.2
   device_info_plus: ^11.2.1 # Get current device information
   timeago: ^3.7.0 # Converts a date into a humanized text
-  flutter_native_splash: ^2.4.4
+  flutter_native_splash: ^2.4.4 # Customize Flutter's default white native splash screen
   flutter_markdown: ^0.7.5 # A markdown renderer for Flutter.
   # web_socket_channel: ^3.0.1 # It provides a cross-platform WebSocketChannel API
   action_cable: ^1.3.0 # ActionCable is the default realtime websocket framework and protocol in Rails.
@@ -55,6 +57,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true # internationalization
   assets:
     - .env.production
     - .env.development
@@ -63,8 +66,8 @@ flutter:
     - assets/images/
 
 flutter_native_splash:
-  color: "#F8F9FF"
-  color_dark: "#111418"
+  color: '#F8F9FF'
+  color_dark: '#111418'
   image: assets/images/splash.png
   android_12:
     image: assets/images/adaptive-icon.png
