--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   # web_socket_channel: ^3.0.1 # It provides a cross-platform WebSocketChannel API
   action_cable: ^1.3.0 # ActionCable is the default realtime websocket framework and protocol in Rails.
   flutter_local_notifications: ^18.0.1 # A cross platform plugin for displaying local notifications.
+  permission_handler: ^11.3.1 # Request permissions and check their status
+  open_settings: ^2.0.2 # open various settings screen in Android and Ios
 
   # desktop
   window_manager: ^0.4.3 # This plugin allows Flutter desktop apps to resizing and repositioning the window.
