feat: daily update

--- a/.env.production
+++ b/.env.production
@@ -10,3 +10,11 @@ APP_NAME=Chatwoot
 # [google]
 GOOGLE_ANDROID_SERVICES_FILE=
 IOS_ANDROID_SERVICES_FILE=
+
+# [attachments]
+ATTACHMENT_ALLOWED_EXTENSIONS=png,jpg,mp3,mp4,hevc
+ATTACHMENT_SIZE_LIMIT=5242880
+
+# [other]
+HELP_URL=https://www.chatwoot.com/help-center
+PAGE_SIZE=10
