--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = chatwoot
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.chatwoot
+PRODUCT_BUNDLE_IDENTIFIER = com.chatwoot.app
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 Chatwoot Inc. All rights reserved.
