ci: add --no-fatal-warnings

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -38,4 +38,4 @@ jobs:
         run: flutter test
 
       - name: analyze
-        run: dart analyze
+        run: dart analyze --no-fatal-warnings
