--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   just_audio: ^0.9.44 # feature-rich audio player
   record: ^5.2.0 # Audio recorder from microphone to a given file path or stream.
   flutter_colorpicker: ^1.1.0
+  translator: ^1.0.3+1 # Free Google Translate API for Dart
 
   # desktop
   window_manager: ^0.4.3 # This plugin allows Flutter desktop apps to resizing and repositioning the window.
