--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 android {
-    namespace = "com.chatwoot.app"
+    namespace = "com.chatwoot.flutter_app"
     compileSdk 34
     ndkVersion "27.0.12077973"
 
@@ -28,7 +28,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.chatwoot.app"
+        applicationId = "com.chatwoot.flutter_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
         minSdk = 23
