--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,6 +2,7 @@ analyzer:
   errors:
     non_constant_identifier_names: ignore
     constant_identifier_names: ignore
+    no_leading_underscores_for_library_prefixes: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
