--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,33 +19,33 @@ dependencies:
   universal_io: any # A cross-platform dart:io that works on all platforms, including browsers.
   video_player: any # A Flutter plugin for iOS, Android and Web for playing back video on a Widget surface.
 
-  shared_preferences: ^2.5.2
+  shared_preferences: ^2.5.3
   dio: ^5.8.0+1 # A powerful HTTP networking package for Dart/Flutter
   dio_http2_adapter: ^2.6.0
   logger: ^2.5.0
-  refreshed: ^3.0.0 # This is a refreshed version of GetX
+  get: ^5.0.0-release-candidate-9.3.2
   events_emitter: ^0.6.0
   url_launcher: ^6.3.1 # Launching a URL
   google_fonts: ^6.2.1
-  file_picker: ^8.3.5 # native file explorer to pick single or multiple files
-  extended_image: ^9.1.0 # A powerful official extension library of images
+  file_picker: ^10.1.2 # native file explorer to pick single or multiple files
+  extended_image: ^10.0.0 # A powerful official extension library of images
   flutter_inappwebview: ^6.1.5 # inline webview, to use an headless webview, and to open an in-app browser window
   sqflite: ^2.4.2 # Flutter plugin for SQLite
   flutter_dotenv: # Easily configure any flutter application with global variables using a `.env` file.
     git:
       url: https://github.com/trongtindev/flutter_dotenv.git
-  result_dart: ^2.0.0 # Overruns are common in design, and modern architectures always designate a place to handle failures.
-  package_info_plus: ^8.2.1 # querying information about an application package
-  device_info_plus: ^11.3.0 # Get current device information
-  flutter_native_splash: ^2.4.4 # Customize Flutter's default white native splash screen
-  flutter_markdown: ^0.7.6+2 # A markdown renderer for Flutter.
+  result_dart: ^2.1.0 # Overruns are common in design, and modern architectures always designate a place to handle failures.
+  package_info_plus: ^8.3.0 # querying information about an application package
+  device_info_plus: ^11.3.3 # Get current device information
+  flutter_native_splash: ^2.4.6 # Customize Flutter's default white native splash screen
+  flutter_markdown: ^0.7.7 # A markdown renderer for Flutter.
   action_cable: ^1.3.0 # ActionCable is the default realtime websocket framework and protocol in Rails.
-  flutter_local_notifications: ^18.0.1 # A cross platform plugin for displaying local notifications.
-  permission_handler: ^11.3.1 # Request permissions and check their status
-  app_settings: ^5.2.0 # for opening iOS and Android phone settings from an app.
-  chewie: ^1.10.0 # video player for Flutter with a heart of gold.
+  flutter_local_notifications: ^19.1.0 # A cross platform plugin for displaying local notifications.
+  permission_handler: ^12.0.0+1 # Request permissions and check their status
+  app_settings: ^6.1.1 # for opening iOS and Android phone settings from an app.
+  chewie: ^1.11.1 # video player for Flutter with a heart of gold.
   just_audio: ^0.9.46 # feature-rich audio player
-  record: ^5.2.0 # Audio recorder from microphone to a given file path or stream.
+  record: ^6.0.0 # Audio recorder from microphone to a given file path or stream.
   flutter_colorpicker: ^1.1.0
   translator: ^1.0.3+1 # Free Google Translate API for Dart
 
@@ -54,10 +54,10 @@ dependencies:
   sqflite_common_ffi: ^2.3.5 # Linux/Windows/DartVM support
 
   # tracking
-  sentry_flutter: ^8.13.0 # Sentry SDK for Flutter.
-  firebase_core: ^3.11.0
-  firebase_messaging: ^15.2.2
-  firebase_analytics: ^11.4.2
+  sentry_flutter: ^8.14.1 # Sentry SDK for Flutter.
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
+  firebase_analytics: ^11.4.5
 
   # maybe rewrite
   mime: ^2.0.0 # MIME type definitions and for processing streams of MIME multipart media types.
